# mandarin

./: .gitignore  .readthedocs.yml  README.md  alembic.ini  default_benchmarks.toml  default_thesaurus.json  pyproject.toml
.github/workflows/: check.yml
docs/source/: conf.py  index.rst
docs/source/_static/: mandarin.css
docs/source/autodoc/: database.rst  index.rst  taskbus.rst  tools.rst  webapi.rst
docs/source/cli/: genius.rst  index.rst  thesaurus.rst  upload.rst
docs/source/installation/: dev_installation.rst  dev_run.rst  index.rst  requirements.rst
mandarin/: config.py  exc.py  genius.py
mandarin/catalog/database/: engine.py
mandarin/catalog/database/tables/: albumroles.py  songgenres.py  songlayers.py
mandarin/database/: __init__.py  actions.py  base.py  eng.py  engine.py
mandarin/database/alembic/: env.py
mandarin/database/alembic/versions/: 9f0128c8efba_first_revision.py
mandarin/database/tables/: __imports__.py  __init__.py  albumgenres.py  albuminvolvements.py  albumroles.py  albums.py  auditlogs.py  encodings.py  files.py  genres.py  layers.py  musicgenres.py  people.py  roles.py  songgenres.py  songinvolvements.py  songlayers.py  songroles.py  songs.py  users.py
mandarin/database/utils/: __init__.py  actions.py  ts.py
mandarin/taskbus/: __main__.py  celery.py
mandarin/taskbus/tasks/: __init__.py  geniusfetch.py  process_music_file.py  processfiles.py  processfiles_test.py
mandarin/taskbus/utils/: __init__.py  mutagenparse.py
mandarin/testing/fixtures/: database.py
mandarin/testing/samples/: noise.mp3.sha512
mandarin/tools/: __main__.py  upload.py
mandarin/tools/utils/: __init__.py  auth.py  instance.py  jrequests.py  prints.py
mandarin/webapi/: __main__.py  app.py  auth.py  database.py  responses.py
mandarin/webapi/apps/: __init__.py  debug.py  files.py
mandarin/webapi/apps/debug/: __init__.py  __main__.py  description.py
mandarin/webapi/apps/demo/: __main__.py  description.py
mandarin/webapi/dependencies/: __init__.py  auth.py  db.py
mandarin/webapi/models/: __init__.py  a_base.py  b_basic.py  b_extras.py  c_involvements.py  d_inputs.py  database.py  e_outputs.py  f_enhanced.py  parse.py  upload.py
mandarin/webapi/models/enums/: __init__.py
mandarin/webapi/routes/: __init__.py  albums.py  auditlogs.py  auth.py  debug.py  files.py  genres.py  layers.py  metadata.py  people.py  search.py  songs.py  upload.py  version.py
mandarin/webapi/routes/__deleted__/: links.py  (+1 more)
mandarin/webapi/utils/: __init__.py  loginsession.py  upload.py
tests/: test_process_music_file.py
