[tool.poetry]
name = "mandarin"
version = "0.1.0"
description = "A cloud music thingy"
authors = ["Stefano Pigozzi <ste.pigozzi@gmail.com>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
royalnet = "6.0.0a11"
psycopg2 = "^2.8.6"
mutagen = "^1.45.1"
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
requests = "^2.24.0"
uvicorn = "^0.12.2"
fastapi = "^0.61.1"
python-multipart = "^0.0.5"
sqlalchemy = ">1.3"
pydantic-sqlalchemy = "^0.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
