[tool.poetry]
name = "mandarin"
version = "0.2.0"
description = "A cloud music library"
authors = ["Stefano Pigozzi <ste.pigozzi@gmail.com>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
royalnet = "6.0.0a12"
psycopg2 = "^2.8.6"
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
requests = "^2.24.0"
uvicorn = "^0.12.2"
fastapi = "^0.61.1"
python-multipart = "^0.0.5"
sqlalchemy = ">1.3"
aiofiles = "^0.6.0"
celery = {extras = ["redis"], version = "^5.0.2"}
eyed3 = "^0.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
