[tool.poetry]
name = "mandarin"
version = "0.3.0"
description = "A cloud music library"
authors = [
    "Stefano Pigozzi <ste.pigozzi@gmail.com>",
    "Alberto Meschieri <meschio94@gmail.com>",
]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
royalnet = "6.0.0a16"
psycopg2 = "^2.8.6"
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
requests = "^2.24.0"
uvicorn = "^0.12.2"
fastapi = "^0.62.0"
python-multipart = "^0.0.5"
sqlalchemy = ">1.3"
aiofiles = "^0.6.0"
celery = { extras = ["redis"], version = "^5.0.3" }
mutagen = "^1.45.1"
redis = "^3.5.3"
hiredis = "^1.1.0"
click = "^7.1.2"
validators = "^0.18.2"
semver = "^2.13.0"
coloredlogs = "^15.0"
lyricsgenius = { git = "https://github.com/Steffo99/LyricsGenius" }
expiringdict = "^1.2.1"
SQLAlchemy-Utils = "^0.36.8"
sqlalchemy-searchable = { git = "https://github.com/Steffo99/sqlalchemy-searchable" }
matplotlib = "^3.3.4"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-celery = "^0.0.0-alpha.1"
sphinx = "^3.3.1"
sphinx_rtd_theme = "^0.5.0"

[tool.poetry.scripts]
mandarin = 'mandarin.tools.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
